# opengl-learn

./: README.md
04_00_animatie/: main.cpp
04_01_resize/: main.cpp  shader.vert
04_04_Transformari_Keyboard/: main.cpp  shader.frag
04_04_transformari_keyboard/: main.cpp  shader.frag  shader.vert
06_01_animatie/: main.cpp
07_01_proiectie/: main.cpp  shader.frag  shader.vert
08_01/: main.cpp  shader.frag  shader.vert
10_02_umbra/: main.cpp  shader.frag  shader.vert
lines-and-points/: CMakeLists.txt  main.cpp  shader.frag
lines-and-points-old/: main.cpp  shader.vert
sources/: 02_01_doua_primitive.cpp  02_02_Shader.frag  02_02_primitive.cpp
tema 2/: CMakeLists.txt  main.cpp
